--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f2f2f2; /*#b5d4ff*/
-  min-height: 250vh;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-image: url("bg_img.png");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 div {
