--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("bg_img.png");
+  position: relative;
   height: 100vh;
+  min-height: 100vh;
+  background-image: url("bg_img.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
-  min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -21,6 +21,7 @@ nav {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
+  z-index: 2;
 }
 
 .profile {
@@ -29,33 +30,26 @@ nav {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  position: relative;
-  background: linear-gradient(to bottom, #b5d4ff, #f2f2f2, #b5d4ff);
-  background: -moz-linear-gradient(to bottom, #b5d4ff, #f2f2f2, #b5d4ff);
-  background: -o-linear-gradient(to bottom, #b5d4ff, #f2f2f2, #b5d4ff);
-  background: -webkit-linear-gradient(to bottom, #b5d4ff, #f2f2f2, #b5d4ff);
-  border: 1px inset #f2f2f2;
-  border-radius: 0.5em;
   z-index: -2;
 }
 
 .link {
+  position: relative;
   display: flex;
   clear: left;
-  position: relative;
 }
 
 .avatar {
   padding: 0.8em;
   margin: 1em;
   position: relative;
+  max-height: 8.4em;
+  max-width: 8em;
+  border-radius: 5em;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 8.4em;
-  max-width: 8em;
   background: #f2f2f2;
-  border-radius: 5em;
 }
 
 .avatar::before {
@@ -65,10 +59,10 @@ nav {
   left: -2px;
   right: -2px;
   bottom: -2px;
+  border-radius: 5em;
+  filter: blur(5px);
   background: #f2f2f2;
   z-index: -1;
-  filter: blur(5px);
-  border-radius: 5em;
 }
 
 .avatar::after {
@@ -78,19 +72,18 @@ nav {
   left: -2px;
   right: -2px;
   bottom: -2px;
-  background: #f2f2f2;
-  z-index: -2;
   border-radius: 5em;
   filter: blur(25px);
+  background: #f2f2f2;
+  z-index: -2;
 }
 
-.avatar::after,
-.avatar::before {
+.avatar::after,.avatar::before {
   background: linear-gradient(235deg, #88ff00, #f2f2f2, #00d0ff);
 }
 
 .avatar > img {
   position: relative;
-  border-radius: 5.2em;
   max-height: 10em;
+  border-radius: 5.2em;
 }
