--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #f2f2f2;
 }
 
 .avatar::before {
@@ -61,7 +60,6 @@ nav {
   bottom: -2px;
   border-radius: 5em;
   filter: blur(5px);
-  background: #f2f2f2;
   z-index: -1;
 }
 
@@ -74,12 +72,11 @@ nav {
   bottom: -2px;
   border-radius: 5em;
   filter: blur(25px);
-  background: #f2f2f2;
   z-index: -2;
 }
 
 .avatar::after,.avatar::before {
-  background: linear-gradient(235deg, #88ff00, #f2f2f2, #00d0ff);
+  background: linear-gradient(235deg, #2c23ff, #ff00e9);
 }
 
 .avatar > img {
