--- a/style.css
+++ b/style.css
@@ -1,14 +1,40 @@
+/* import google fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
+:root {
+    --body-font: 'Poppins', sans-serif;
+    --h1-font-size: 1.5rem;
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1.125rem;
+    --normal-font-size: .938rem;
+    --small-font-size: .813rem;
+}
+
+/* Font size for large devices */
+@media screen and (min-width: 968px) {
+    :root {
+        --h1-font-size: 2.25rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.25rem;
+        --normal-font-size: 1rem;
+        --small-font-size: .875rem;
+        --smaller-font-size: .813rem;
+    }
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
-  position: relative;
   height: 100vh;
   min-height: 100vh;
   background-image: url("bg_img.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 div {
@@ -45,7 +71,7 @@ nav {
   position: relative;
   max-height: 8.4em;
   max-width: 8em;
-  border-radius: 5em;
+  border-radius: 5em;o
   display: flex;
   justify-content: center;
   align-items: center;
