--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  position: relative;
   height: 100vh;
   min-height: 100vh;
   background-image: url("bg_img.png");
@@ -79,7 +80,7 @@ nav {
 
 .avatar::after,.avatar::before {
 content: "";
-  position: relative;
+  position: absolute;
   top: -2px;
   left: -2px;
   right: -2px;
