--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ nav {
   position: relative;
   display: flex;
   clear: left;
-  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .avatar {
@@ -82,10 +83,10 @@ nav {
 .avatar::after,.avatar::before {
 content: "";
   position: absolute;
-  top: -2px;
-  left: -2px;
-  right: -2px;
-  bottom: -2px;
+  top: -3px;
+  left: -3px;
+  right: -3px;
+  bottom: -3px;
   border-radius: 5em;
   background: linear-gradient(235deg, #2c23ff, #ff00e9);
 }
