--- a/style.css
+++ b/style.css
@@ -31,16 +31,18 @@ body {
   padding: 0;
   position: relative;
   height: 100vh;
+  width: 100vw;
   min-height: 100vh;
   background-image: url("bg_img.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  color: white;
 }
 
 div {
-  margin: 0.25em;
-  padding: 0.5em;
+  magin: 0.25em;
+  padding: 1.2em;
 }
 
 nav {
@@ -52,12 +54,16 @@ nav {
 }
 
 .profile {
+  margin: 15% 10%;
+  padding: 2em;
   position: relative;
+  height: 35%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  z-index: -2;
+  background-color: rgba(0,0,0,0.55);
+  border-radius: 2.35em;
 }
 
 .link {
@@ -66,6 +72,7 @@ nav {
   clear: left;
   justify-content: center;
   align-items: center;
+  font-size: 12pt;
 }
 
 .avatar {
@@ -74,35 +81,71 @@ nav {
   position: relative;
   max-height: 8.4em;
   max-width: 8em;
-  border-radius: 5em;o
+  border-radius: 5em;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.avatar::after,.avatar::before {
-content: "";
-  position: absolute;
-  top: -3px;
-  left: -3px;
-  right: -3px;
-  bottom: -3px;
-  border-radius: 5em;
-  background: linear-gradient(235deg, #2c23ff, #ff00e9);
-}
-
-.avatar::before {
-  filter: blur(5px);
-  z-index: -1;
-}
-
-.avatar::after {
-  filter: blur(25px);
-  z-index: -2;
 }
 
 .avatar > img {
   position: relative;
   max-height: 10em;
   border-radius: 5.2em;
+}
+
+/* Button CSS */
+.button-85 {
+  padding: 0.3em 1.4em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 40px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
