--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* import google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400...600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300...700&display=swap');
 
 :root {
-    --body-font: 'Poppins', sans-serif;
     --h1-font-size: 1.5rem;
     --h2-font-size: 1.25rem;
     --h3-font-size: 1.125rem;
@@ -33,11 +33,10 @@ body {
   height: 100vh;
   width: 100vw;
   min-height: 100vh;
-  background-image: url("bg_img.png");
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url("bg_img.png") no-repeat center;
   background-size: cover;
   color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
 div {
@@ -47,10 +46,30 @@ div {
 
 nav {
   display: block;
+  padding: 1em;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
   z-index: 2;
+  font-family: 'Teko', sans-serif;
+  background:linear-gradient(120deg, #000000, #191970);
+}
+
+.navbar-brand{
+  display: flex;
+  padding: 0.4em 1em;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 36px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.nav-item {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  clear: right;
 }
 
 .profile {
@@ -69,7 +88,6 @@ nav {
 .link {
   position: relative;
   display: flex;
-  clear: left;
   justify-content: center;
   align-items: center;
   font-size: 12pt;
@@ -87,10 +105,11 @@ nav {
   align-items: center;
 }
 
-.avatar > img {
+.avatar>img {
   position: relative;
   max-height: 10em;
   border-radius: 5.2em;
+  object-fit: cover;
 }
 
 /* Button CSS */
@@ -111,7 +130,7 @@ nav {
 
 .button-85:before {
   content: "";
-  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  background: linear-gradient(45deg, #ff0000,#ff7300,#fffb00,#48ff00,#00ffd5,#002bff,#7a00ff,#ff00c8,#ff0000);
   position: absolute;
   top: -2px;
   left: -2px;
