--- a/styles/cards.css
+++ b/styles/cards.css
@@ -5,12 +5,19 @@
 .cards {
     display: flex;
     flex-direction: column;
+    height: 360px;
 }
 
-.cards>hr{
+.cards>hr {
     margin-top: 0.75rem;
 }
 
+.cards>div {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
 
 .cards:hover {
     background-color: #A67B5B;
@@ -20,9 +27,16 @@
     box-shadow: 2px 5px 24px 0px rgba(0, 0, 0, 0.75);
 }
 
+
+/* Card thumbnail CSS */
 .cards-fig {
     display: flex;
-    height: 75%;
+    height: 60%;
+    overflow: hidden;
+    border-radius: inherit;
+}
+
+.cards-fig>img {
     overflow: hidden;
     border-radius: inherit;
 }
@@ -38,4 +52,74 @@
     font-stretch: semi-expanded;
     font-weight: 500;
     text-transform: capitalize;
+}
+
+/* Button CSS */
+.cards-button {
+    align-items: center;
+    appearance: none;
+    background-color: #fff;
+    border-radius: 24px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-sizing: border-box;
+    color: #3c4043;
+    cursor: pointer;
+    display: inline-flex;
+    fill: currentcolor;
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 28px;
+    justify-content: center;
+    letter-spacing: .25px;
+    line-height: normal;
+    max-width: 100%;
+    overflow: visible;
+    padding: 2px 24px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: auto;
+    will-change: transform, opacity;
+    z-index: inherit;
+}
+
+.cards-button:hover {
+    background: #F6F9FE;
+    color: #174ea6;
+}
+
+.cards-button:active {
+    box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+    outline: none;
+}
+
+.cards-button:focus {
+    outline: none;
+    border: 2px solid #4285f4;
+}
+
+.cards-button:not(:disabled) {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.cards-button:not(:disabled):hover {
+    box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
+}
+
+.cards-button:not(:disabled):focus {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.cards-button:not(:disabled):active {
+    box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
+}
+
+.cards-button:disabled {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
