--- a/styles/output.css
+++ b/styles/output.css
@@ -668,12 +668,20 @@ video {
   max-height: 8rem;
 }
 
-.min-h-16 {
-  min-height: 4rem;
-}
-
 .min-h-full {
   min-height: 100%;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.min-h-36 {
+  min-height: 9rem;
+}
+
+.min-h-svh {
+  min-height: 100svh;
 }
 
 .w-3\/5 {
@@ -786,6 +794,14 @@ video {
   padding: 0.5rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -829,6 +845,11 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-1 {
@@ -1001,6 +1022,22 @@ video {
     min-height: 360px;
   }
 
+  .sm\:min-h-screen {
+    min-height: 100vh;
+  }
+
+  .sm\:min-h-80 {
+    min-height: 20rem;
+  }
+
+  .sm\:min-h-lvh {
+    min-height: 100lvh;
+  }
+
+  .sm\:min-h-full {
+    min-height: 100%;
+  }
+
   .sm\:w-1\/2 {
     width: 50%;
   }
@@ -1025,9 +1062,27 @@ video {
     padding: 1rem;
   }
 
+  .sm\:p-10 {
+    padding: 2.5rem;
+  }
+
+  .sm\:p-6 {
+    padding: 1.5rem;
+  }
+
   .sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .sm\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .sm\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 
   .sm\:pb-8 {
