--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,16 @@
-html,
 body {
   position: relative;
   min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
   background-repeat: repeat-x;
   background-size: contain;
-  background: url("../assets/body-bg-light.png");
+  background: url("../assets/body-bgi.png");
 }
 
 /* Navbar CSS */
 
 nav {
+  font-family: Arial, Helvetica, sans-serif;
   z-index: 1000;
 }
 
@@ -56,7 +57,7 @@ nav {
 }
 
 .scroll-animate {
-  animation: appear 5s ease;
+  animation: appear 3s linear;
 }
 
 /* Navbar button CSS */
@@ -80,7 +81,6 @@ nav {
 /* Cards container CSS */
 
 #project-bg {
-  background-color: rgba(255, 255, 255);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -105,12 +105,13 @@ nav {
   background-image: url("../assets/dots-bg.png");
   background-repeat: repeat-x;
   background-size: contain;
+  font-family: Arial, Helvetica, sans-serif;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 600;
   -webkit-box-shadow: 10px 5px 24px -5px #000000;
   -moz-box-shadow: 10px 5px 24px -5px #000000;
   box-shadow: 10px 5px 24px -5px #000000;
-  transition: all 1s ease 100ms;
+  transition: all 2s linear 100ms;
   z-index: 1;
 }
 
@@ -244,6 +245,8 @@ nav {
 .contacts {
   text-decoration: none;
   color: rgb(0, 0, 0);
+  background-color: #d4d4d4;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .icons8-instagram {
