--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/* <weight>: Use a value from 200 to 800 */
+
+p {
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   position: relative;
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
   background-size: cover;
   background: url("../assets/body-bgi.png");
+  z-index: -2;
 }
 
 h1,
@@ -51,11 +62,15 @@ header {
 
 .fade-on-scroll {
   opacity: 0; /* Initially hidden */
-  animation: fade-in 0.5s ease-out;
+  animation: fade-in 0.3s ease-out;
 }
 
 .fade-on-scroll.in-view {
   opacity: 1;
+}
+
+.fade-delay {
+  transition: all 1s linear 100ms;
 }
 
 /* Header button CSS */
@@ -74,7 +89,6 @@ header {
   background-image: url("../assets/profile-card-bg.svg");
   overflow: hidden;
   background-size: contain;
-  background-blend-mode: darken;
   border: 2px solid #0d1717;
 }
 
@@ -113,7 +127,7 @@ header {
   -webkit-box-shadow: 10px 5px 24px -5px #000000;
   -moz-box-shadow: 10px 5px 24px -5px #000000;
   box-shadow: 10px 5px 24px -5px #000000;
-  transition: all 2s linear 100ms;
+  transition: all 1s linear;
   z-index: 10;
 }
 
@@ -244,7 +258,7 @@ header {
 
 /* Skills CSS */
 
-.tech-skills {
+.skills {
   color: #ffffff;
   background-color: #0d1717;
   background-image: url("../assets/tech-skill-bg.jpg");
